<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
       android:id="@+id/tv_text"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="12dp"
       android:text="@string/description"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
       android:id="@+id/tv_process_info"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/process_info"
       android:gravity="center_vertical"
       android:paddingStart="12dp"
       android:paddingEnd="12dp"
       app:layout_constraintTop_toBottomOf="@id/tv_text"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
        android:id="@+id/et_old_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_old_name"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_process_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/v_line"
    />

    <View
        android:id="@+id/v_line"
        android:layout_width="16dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintTop_toBottomOf="@+id/tv_process_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_new_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_name"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_process_info"
        app:layout_constraintStart_toEndOf="@+id/v_line"
        app:layout_constraintEnd_toStartOf="@+id/bt_update"/>

    <Button
        android:id="@+id/bt_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_name"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_process_info"/>

    <EditText
        android:id="@+id/et_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_delete_student_by_name"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_new_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_delete"
    />

    <Button
        android:id="@+id/bt_delete"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/delete"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_update"/>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operation_info"
        android:maxLines="3"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_table"
        android:layout_marginTop="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_info"
    />

    <ListView
        android:id = "@+id/lv_data_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label"
        app:layout_constraintBottom_toTopOf="@+id/bt_handover_process"
    />

    <Button
        android:id="@+id/bt_handover_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handover_process"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bt_insert_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_student"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_handover_process"
        app:layout_constraintBottom_toBottomOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>